# ESP32-S3-Touch-LCD-3.49

./: .gitignore  AGENTS.md
Examples/ESP-IDF/: AGENTS.md
Examples/ESP-IDF/10_LVGL_V9_Test/main/: main.c  user_config.h
calendar-server/: Dockerfile  README.md  docker-compose.yml
calendar-server/app/: main.py  storage.py
calendar-server/app/static/: index.html
kids-calendar/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
kids-calendar/components/battery_bsp/: CMakeLists.txt  battery_bsp.c
kids-calendar/components/battery_bsp/include/: battery_bsp.h
kids-calendar/components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
kids-calendar/components/pcf85063_rtc/: CMakeLists.txt  pcf85063.c
kids-calendar/components/pcf85063_rtc/include/: pcf85063.h
kids-calendar/components/qmi8658_imu/: CMakeLists.txt  qmi8658_imu.c
kids-calendar/components/qmi8658_imu/include/: qmi8658_imu.h
kids-calendar/components/screenshot_server/: CMakeLists.txt  screenshot_server.c
kids-calendar/components/screenshot_server/include/: screenshot_server.h
kids-calendar/components/ui_calendar/: CMakeLists.txt  lv_font_chinese_14.c  lv_font_chinese_16.c  lv_font_chinese_20.c  ui_calendar.c  ui_screenshot.c  ui_styles.c
kids-calendar/components/usb_screenshot/: CMakeLists.txt  usb_screenshot.c  usb_screenshot.h
kids-calendar/components/wifi_sync/: CMakeLists.txt  wifi_sync.c
kids-calendar/main/: CMakeLists.txt  Kconfig.projbuild  main.c  user_config.h
prompt/: esp32-screenshot-debug.md  kimi-debug-workflow.md  prompt-screenshot-component.md  prompt-usb-screenshot.md
(+25 files in other folders)
